--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,6 +18,7 @@ body {
     margin: 0;
     padding-bottom: 6rem;
     min-height: 100%;
+    background-color: $body-bg;
   }
 
 .bh-absolute-bottom {
