--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,8 +19,8 @@ $mycolor-3:rgba(193,173,121,1);
 $mycolor-4:rgba(147,131,86,1);
 $mycolor-5:rgba(155,59,29,1);
 
-$body-bg: $color-white;
-$body-color: $color-grey-4;
+$body-bg: $mycolor-5;
+$body-color: $color-grey-1;
 $body-link: $mycolor-5;
 
 
@@ -37,14 +37,14 @@ $clientcolor-5:rgba(250,120,120,1);
 
 // Imports
 // Website
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googhttps://fonts.googleapis.com/css?family=Anton|Raleway:400,400i,700,700ileapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 // Client specific
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleaphttps://fonts.googleapis.com/css?family=Anton|Raleway:400,400i,700,700iis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 // type
-$myfont-family-base: 'Raleway', serif;
-$myfont-family-title: $myfont-family-base;
+$myfont-family-base: 'Raleway', sans-serif;
+$myfont-family-title: 'Anton', sans-serif;
 
 // sizes
 $font-size-base: 16px;
@@ -58,8 +58,8 @@ $font-weight-bold: 800;
 //------------------------------
 
 // type
-$clientfont-family-base: 'Raleway', serif;
-$clientfont-family-title: $myfont-family-base;
+$clientfont-family-base: 'Raleway', sans-serif;
+$clientfont-family-title: 'Anton', sans-serif;
 
 // sizes
 $client-font-size-base: 16px;
