--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -38,6 +38,10 @@ footer {
         }
     }
 }
+h1{
+  font-family: 'Anton' sans-serif;
+  font-style: to-upper-case($string: "all")
+}
 
 /* BACK TO TOP
 -------------------------
