--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -39,8 +39,8 @@ footer {
     }
 }
 h1{
-  font-family: 'Anton' sans-serif;
-  font-style: to-upper-case($string: "all")
+  font-family: 'Anton', sans-serif;
+  font-style: to-upper-case($string: "all");
 }
 
 /* BACK TO TOP
