--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -12,6 +12,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: $myfont-family-title;
     font-weight: $font-weight-bold;
+    font-family: "Anton";
+    font-style: to-upper-case($string: "");
 }
 
 h1 {
