--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -43,8 +43,8 @@ $clientcolor-5:rgba(250,120,120,1);
 @import url('https://fonts.googleaphttps://fonts.googleapis.com/css?family=Anton|Raleway:400,400i,700,700iis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 // type
-$myfont-family-base: 'Raleway', sans-serif;
-$myfont-family-title: 'Anton', sans-serif;
+$myfont-family-base: "Raleway", sans-serif;
+$myfont-family-title: "Anton", sans-serif;
 
 // sizes
 $font-size-base: 16px;
@@ -67,3 +67,4 @@ $client-lineheight-base: 1.6em;
 $client-font-weight-base: 400;
 $client-font-weight-light: 200;
 $client-font-weight-bold: 800;
+
