--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,8 +56,8 @@ $font-weight-base: 400;
 //------------------------------
 
 // type
-$clientfont-family-base: 'Raleway', sans-serif;
-$clientfont-family-title: 'Anton', sans-serif;
+$clientfont-family-base: "Raleway", sans-serif;
+$clientfont-family-title: "Anton", sans-serif;
 
 // sizes
 $client-font-size-base: 16px;
