--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -4,6 +4,7 @@
     .custom-nav-ver {
         .collapse {
             display: block;
+            color:$clientcolor-7;
         }
         .navbar-collapse {
             width:100%;
